welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int=0 
 nbPas= nbPas + 1;
while(!estSurBiscuit()){
	avance();
} 
prendBiscuit();
var dejaFait:Int=0
while(dejafait!=nbPas){
	recule();
}
 dejafait= dejaFait + 1;
 posebiscuit();

